tests/errors/arrow.xen
spawn x: string = 42

echo(x)
